--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,19 @@
     font-family: "Inconsolata", -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,"Apple Color Emoji",Arial,sans-serif,"Segoe UI Emoji","Segoe UI Symbol";
 }
 
-.ui-title-1, .ui-title-5, .ui-title-2, .ui-title-3, .ui-title-4, .ui-text {
+.ui-title-1, 
+.ui-title-5, 
+.ui-title-2, 
+.ui-title-3, 
+.ui-title-4, 
+.ui-text {
+    padding: 0 0.4rem;
+    transition: 0.4s all ease;
    &:focus {
        background-color: #f3f3f3;
    } 
+}
+
+.isUppercase {
+    text-transform: uppercase;
 }
